# Automation.BUYME

./: base_page.py  config.json  extras_test.py  home_screen_test.py  main.py  main_test.py  pick_business_test.py  pyproject.toml  registration.py  registration_screen_test.py  registration_test.py  scripts.py  sender_and_receiver.py  tests.py
allure-report/: 0200be51-1425-40fd-bc86-f309414acda2-container.json  06be3049-7717-4b0c-b17d-7ce1214a9b11-result.json  10c48a87-ae89-41cc-84ae-7a1786e2b0b3-attachment.txt  11b07194-8f2d-4867-8aeb-0156628c3ba0-container.json  13078a9c-6688-45af-8ec4-f8f7d2d7a8d5-result.json  169929fc-3897-49bb-824a-7372ccac9030-result.json  188fbfad-4b41-451d-aa04-8194cb6ff4dd-result.json  1b73beda-3fb6-489b-bcee-3289856bb92c-container.json  1c3b6915-b009-4ecb-b9c6-ba909663c2b8-attachment.txt  22dd0cb6-0286-46e7-973f-f189fc86e301-container.json  29f2a401-1dea-4ed7-b4b1-c2407007d8cd-result.json  2a4404a0-e6bf-4c4a-8b00-6385ac02d0fa-result.json  2b846cdc-415e-4fae-9410-70834d858ce7-result.json  2d69c5ea-0577-4234-a5e0-700d1e743600-result.json  30faf114-f93f-4149-ad68-394cb2fbf0d0-attachment.txt  33a0f989-af4c-402e-8405-d03565022cee-result.json  39ec9aca-edf7-419a-83a2-4da2caa40638-attachment.txt  3d15156b-6fbe-484b-9cee-e1cb6271b2b2-result.json  4a9f0ea3-3a54-49b9-bbd0-9485ffda51b3-result.json  5090dbf5-a876-449e-9c7e-61c7fd9adcdf-result.json  52e2ed89-8848-4b33-822d-d7314643eafe-result.json  554dd626-555f-4f4d-b608-0eb5e32a6ec5-result.json  5a99e887-bdd5-4f84-a0f9-86aa6200edf3-result.json  5bfea4db-5287-425a-97d3-46fc5828e1a4-container.json  (+38 more)
(+1 files in other folders)
