[tool.poetry]
name = "automation-buyme"
version = "0.1.0"
description = ""
authors = ["Netzer-yech <netzer.yech@gmail.com>"]
readme = "README.md"
packages = [{include = "automation"}]

[tool.poetry.dependencies]
python = "^3.11"
selenium = "^4.8.3"
requests = "^2.28.2"
allure-pytest = "^2.13.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
